# Smart-City-Management

./: .gitignore  Dockerfile  README.md  crime.MOV  index.html  package-lock.json  package.json
airpollution/PowerBI-Air-pollution-Dashboard/: air pollution dataset_fiiled_ds.pbids
airpollution/dashboard/: app.js  index.html  style.css
apps/api/: .env.example  README.md  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 20260329_01_baseline_mrv_schema.py  20260329_02_add_sync_trigger_to_history.py
apps/api/app/: main.py  models.py
apps/api/app/api/: routes.py
apps/api/app/db/: __init__.py  database.py  tables.py
apps/api/app/providers/: gee.py  reverse_geocoder.py
apps/api/app/services/: crime_monitor.py  demo_store.py  pipeline_scheduler.py  pipeline_service.py  report_exports.py  workflow_store.py
apps/api/tests/: conftest.py  test_demo_store.py  test_pipeline_service.py  test_routes.py
apps/web/: next.config.ts  package.json
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/app/api/ai-assistant/: route.ts
apps/web/app/api/almaty-air/: route.ts
apps/web/app/api/almaty-air-map/: route.ts
apps/web/app/api/crime-monitor/: route.ts
apps/web/app/api/health-risk-alert/: route.ts
apps/web/app/traffic-live/: page.tsx
apps/web/components/: anomaly-map.tsx  pipeline-history-panel.tsx  signal-map.tsx
apps/web/lib/: ai-assistant.ts  api.ts  city-signals.ts  dashboard-types.ts  potholes-data.ts  site-content.ts
trafficjams/: dashboard.py  detector.py  run.py  traffic_data.json
(+5 files in other folders)
