[project]
name = "saryna-mrv-api"
version = "0.1.0"
description = "FastAPI backend scaffold for methane and flaring MRV workflow demo."
requires-python = ">=3.11"
dependencies = [
  "alembic>=1.14,<2.0",
  "APScheduler>=3.10,<4.0",
  "fastapi[standard]>=0.110,<1.0",
  "earthengine-api>=1.0.0",
  "geoalchemy2>=0.15,<1.0",
  "pydantic>=2.0,<3.0",
  "psycopg[binary]>=3.1,<4.0",
  "python-dotenv>=1.0,<2.0",
  "python-docx>=1.1,<2.0",
  "reportlab>=4.0,<5.0",
  "sqlalchemy>=2.0,<3.0"
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27,<1.0",
  "pytest>=8.0,<9.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
